added accept/reject route, improved relation response to include myRequest bool
