# openapi.json
@@ -337,7 +337,12 @@
                       {
                         "$ref": "#/components/schemas/FriendRequest"
                       }
-                    ]
+                    ],
+                    "properties": {
+                      "myRequest": {
+                        "type": "boolean"
+                      }
+                    }
                   }
                 }
               }
